--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genman | Home</title>\
+    <title>Genman | Home</title>
 
     <meta name="description" content="Genman is a web application that allows you to generate a random strong password store passwords securely.">
   </head>
